FIX on start() jump in animation

--- a/css/pulse.css
+++ b/css/pulse.css
@@ -39,40 +39,46 @@ body, html {
     background: #0a3155;
     cursor: pointer;
     /* box-shadow: 0 0 0 0 rgba(90, 153, 212, 0.5); */
-    -webkit-animation: pulse 9s infinite;
+    /* -webkit-animation: pulse 9s infinite; */
   }
 
   
   @-webkit-keyframes pulse {
     0% {
+      transform: scale(1);
+      -webkit-transform: scale(1);
+      -moz-transform: scale(1);
+      -ms-transform: scale(1);
+      -o-transform: scale(1);
+}
+    46% {
       -moz-transform: scale(0.9);
       -ms-transform: scale(0.9);
       -webkit-transform: scale(0.9);
       transform: scale(0.9);
-    }
-    46% {
-      -moz-transform: scale(1);
-      -ms-transform: scale(1);
-      -webkit-transform: scale(1);
-      transform: scale(1);
+      -o-transform: scale(0.9);
     }
     50% {
+      -moz-transform: scale(0.9);
+      -ms-transform: scale(0.9);
+      -webkit-transform: scale(0.9);
+      transform: scale(0.9);
+      -o-transform: scale(0.9);
+}
+    96% {
       -moz-transform: scale(1);
       -ms-transform: scale(1);
       -webkit-transform: scale(1);
       transform: scale(1);
-    }
-    96% {
-      -moz-transform: scale(0.9);
-      -ms-transform: scale(0.9);
-      -webkit-transform: scale(0.9);
-      transform: scale(0.9);
-    }
+      -o-transform: scale(1);
+}
     100% {
-      -moz-transform: scale(0.9);
-      -ms-transform: scale(0.9);
-      -webkit-transform: scale(0.9);
-      transform: scale(0.9);
-    }
+      -moz-transform: scale(1);
+      -ms-transform: scale(1);
+      -webkit-transform: scale(1);
+      transform: scale(1);
+      -o-transform: scale(1);
+}
+
   }
   
